fix: bid logic dropdown button spacing issue resolve

--- a/components/common/filters/style.module.scss
+++ b/components/common/filters/style.module.scss
@@ -218,6 +218,7 @@
 		}
 		.bidPricebtn{
 			border-top: 1px solid $gray-65;
+			padding: 12px;
 		}
 	}
 	&.bidPriceButton{
